Add transactions with importer

--- a/app/views/accounts/_account.html.erb
+++ b/app/views/accounts/_account.html.erb
@@ -9,4 +9,9 @@
     <%= account.kind.humanize %>
   </div>
 
+  <div>
+    <strong>Currency:</strong>
+    <%= account.currency.code %>
+  </div>
+
 </div>
