--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -28,6 +28,9 @@
       <%= link_to "Home", root_path %> |
       <% if user_signed_in? %>
         <%= link_to "Accounts", accounts_path %> |
+        <%= link_to "Transactions", transactions_path %> |
+        <%= link_to "Currencies", currencies_path %> |
+        <%= render "shared/simplefin_link" %> |
         <%= link_to "Logout", destroy_user_session_path, data: { turbo_method: :delete } %>
       <% else %>
         <%= link_to "Login", new_user_session_path %> |
