--- a/app/views/simplefin_connections/_link_form.html.erb
+++ b/app/views/simplefin_connections/_link_form.html.erb
@@ -1,17 +1,18 @@
 <% if sf_account.unlinked? %>
   <%= form_with model: sf_account, url: link_simplefin_account_path(sf_account), method: :post do |form| %>
+    <%= form.label :account_id, "Account to link", class: "sr-only" %>
     <span>
-      <%= form.collection_select :account_id, current_user.accounts.linkable.unlinked.order(:name), :id, :name, { prompt: "Not linked" }, { "aria-label": "Account to link" } %>
+      <%= form.collection_select :account_id, current_user.accounts.linkable.unlinked.order(:name), :id, :name, prompt: "Not linked" %>
     </span>
     <span>
-      <%= form.submit "Link" %>
+      <%= form.submit "Link", "aria-label": "Link SimpleFIN account" %>
     </span>
   <% end %>
 <% else %>
   <%= form_with model: sf_account, url: unlink_simplefin_account_path(sf_account), method: :delete, data: { turbo_confirm: "Are you sure you want to unlink this account?" } do |form| %>
     <span><%= sf_account.account.name %></span>
     <span>
-      <%= form.submit "Unlink" %>
+      <%= form.submit "Unlink", "aria-label": "Unlink SimpleFIN account" %>
     </span>
   <% end %>
 <% end %>
